--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@
 
 		<article>  
 
-			<ul>
 				{% for presentation in site.data.presentations %}
-					<a href="{{ presentation.revealjs }}.html">
-						<li>{{ presentation.title }}</li>
-					</a>
+					<a href="{{ site.url }}{{ site.baseurl }}{{ presentation.revealjs }}">{{ presentation.title }}</a>
 				{% endfor %}
-			</ul>
 		  	
 		</article>
 
