--- a/MRPC.html
+++ b/MRPC.html
@@ -46,11 +46,11 @@ Fourth Circuit Judicial Conference in Greensboro, North Carolina." />
 	<body>
 		<div class="reveal">
 			<div class="slides">
-									<section id="title-slide">					
+									<section id="title-slide" data-state="no-title-header">					
 						<div class="title">
 						<h1 class="title">Legal Ethics</h1>
 												<h2 class="title">Fourth Circuit Judicial Conference</h2>
-																								<h4 class="date">29 June 2023</h4>
+																														<h4 class="title">29 June 2023</h4>
 												</div>
 					</section>
 								
@@ -1871,6 +1871,10 @@ conduct will occur.</p>
 		// - https://revealjs.com/config/
 		Reveal.initialize({
 		hash: true,
+		width: 1280,
+		height: 720,
+		
+		// Optional libraries used to extend on reveal.js
 
 		// Learn about plugins: https://revealjs.com/plugins/
 		plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMenu ]
