--- a/LegalEthics&Professionalism.html
+++ b/LegalEthics&Professionalism.html
@@ -1,60 +1,203 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+<head>
+<meta charset="utf-8">
 
-		<title>Legal Ethics</title>
+<title>Balancing the Letter of Ethical Rules with a Spirit of Professionalism</title>
 
-		<meta name="author" content="Eric M. Fink">
+<meta name="author" content="Eric M. Fink">
 
-				<meta name="description" content="Legal ethics presentation for the 2023
-Fourth Circuit Judicial Conference in Greensboro, North Carolina." />
+<meta name="description" content="Presentation for the 2023 Fourth
+Circuit Judicial Conference" />
+
+<link rel="stylesheet" href="dist/reset.css">
+<link rel="stylesheet" href="dist/reveal.css">
+ 
+<link rel="stylesheet" href="dist/theme/emf-legal.css" id="theme">
+
+<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
+<link rel="stylesheet" href="https://use.typekit.net/viv2jun.css">
+<link href="https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700&display=swap" rel="stylesheet">
+
+<!-- If the query includes 'print-pdf', include the PDF print sheet -->
+<script>
+	if( window.location.search.match( /print-pdf/gi ) ) {
+		var link = document.createElement( 'link' );
+		link.rel = 'stylesheet';
+		link.type = 'text/css';
+		link.href = 'css/print/pdf.css';
+		document.getElementsByTagName( 'head' )[0].appendChild( link );
+  }
+</script>
+</head>
+
+<body>
+<div class="reveal">
+<div class="slides">
+		<section id="title-slide" data-state="no-title-header">					
+	<div class="title">
+	<h1 class="title">Balancing the Letter of Ethical Rules with a Spirit of
+Professionalism</h1>
+		<h2 class="title">Fourth Circuit Judicial Conference</h2>
+					<h4 class="title">29 June 2023</h4>
+		</div>
+	</section>
 		
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
-		
-				<link rel="stylesheet" href="dist/theme/emf-legal.css" id="theme">
-				<!-- Theme for syntax highlighting -->
-		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
-		
-		
-	<!-- Adobe Fonts -->
-	<link rel="stylesheet" href="https://use.typekit.net/viv2jun.css">
+	<section>
+<section id="questions" class="title-slide slide level1">
+<h1>Questions</h1>
 
-	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700&display=swap" rel="stylesheet">
+</section>
+<section id="question-1" class="title-slide slide level2">
+<h2>Question 1</h2>
+<p>The title of this program refers to both “Ethical Rules” and
+“Professionalism” and the need to “balance” the demands of each.</p>
+<p>Why do we speak of “Ethical Rules” and “Professionalism” as two
+different things and why do they need balancing?</p>
+</section>
 
-		
+<section id="question-2" class="title-slide slide level2">
+<h2>Question 2</h2>
+<p>Fed. R. Civ. P. 1 requires the parties, attorneys, and court to
+interpret and employ the rules of procedure in civil cases to secure the
+just, speedy, and inexpensive resolution of all civil claims. The
+advisory notes to Rule 1, as well as countless judicial opinions have
+interpreted Rule 1 to impose a duty on the parties and counsel to
+cooperate during the discovery phase of civil litigation.</p>
+<p>How does this rule and court-imposed obligation square with an
+attorney’s ethical obligation to represent the interest of their
+client?</p>
+</section>
+<section id="fed-r-civ-p-rule-1" class="slide level3">
+<h3>Fed. R. Civ. P. Rule 1</h3>
+<h4 id="scope-and-purpose">Scope and Purpose</h4>
+<p>These rules govern the procedure in all civil actions and proceedings
+in the United States district courts, except as stated in Rule 81. They
+should be construed, administered, and employed by the court and the
+parties to secure the just, speedy, and inexpensive determination of
+every action and proceeding.</p>
+<h4 id="committee-notes-on-rules2015-amendment">Committee Notes on
+Rules—2015 Amendment</h4>
+<p>Rule 1 is amended to emphasize that just as the court should construe
+and administer these rules to secure the just, speedy, and inexpensive
+determination of every action, so the parties share the responsibility
+to employ the rules in the same way. Most lawyers and parties cooperate
+to achieve these ends. But discussions of ways to improve the
+administration of civil justice regularly include pleas to discourage
+over-use, misuse, and abuse of procedural tools that increase cost and
+result in delay. Effective advocacy is consistent with — and indeed
+depends upon — cooperative and proportional use of procedure.</p>
+</section>
 
-		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
-		<script>
-			if( window.location.search.match( /print-pdf/gi ) ) {
-				var link = document.createElement( 'link' );
-				link.rel = 'stylesheet';
-				link.type = 'text/css';
-				link.href = 'css/print/pdf.css';
-				document.getElementsByTagName( 'head' )[0].appendChild( link );
-		  }
-		</script>
-	</head>
+<section id="question-3" class="title-slide slide level2">
+<h2>Question 3</h2>
+<p>How does one balance zealous advocacy and efficiency and the courts
+disfavoring extensions of time and continuances?</p>
+<p>Why is it important to set proper client expectations at the onset of
+representation?</p>
+</section>
+<section id="model-rules-of-professional-conduct" class="slide level3">
+<h3>Model Rules of Professional Conduct</h3>
+<p>Rule 3.2: Expediting Litigation</p>
+<p>Rule 3.4: Fairness to Opposing Party &amp; Counsel</p>
+</section>
 
-	<body>
-		<div class="reveal">
-			<div class="slides">
-									<section id="title-slide" data-state="no-title-header">					
-						<div class="title">
-						<h1 class="title">Legal Ethics</h1>
-												<h2 class="title">Fourth Circuit Judicial Conference</h2>
-																														<h4 class="title">29 June 2023</h4>
-												</div>
-					</section>
-								
-				<section id="aba-model-rules-of-professional-conduct"
+<section id="question-4" class="title-slide slide level2">
+<h2>Question 4</h2>
+<p>How does a new attorney develop “professional identity?”</p>
+<p>Does it change over time?</p>
+<p>What role should Judges and more senior lawyers have in helping newer
+attorneys develop their professional identity?</p>
+</section>
+
+<section id="question-5" class="title-slide slide level2">
+<h2>Question 5</h2>
+<p>Attorneys sometimes must represent various interests in one matter.
+For example: (1) an attorney may represent multiple parties in the same
+lawsuit; (2) a government attorney may have a specific client but also
+an institutional interest to represent; or (3) a different person or
+entity may fund the litigation.</p>
+<p>How can an attorney navigate situations where the interests of these
+players diverge?</p>
+<p>What are some best practices when navigating such situations?</p>
+</section>
+<section id="model-rules-of-professional-conduct-1"
+class="slide level3">
+<h3>Model Rules of Professional Conduct</h3>
+<p>Rule 1.7: Conflict of Interest</p>
+<p>Rule 1.8(f): Payment by someone other than client</p>
+<p>Rule 1.13: Organization as Client</p>
+</section>
+
+<section id="question-6" class="title-slide slide level2">
+<h2>Question 6</h2>
+<p>Given the hierarchical nature of the practice of law in many
+settings, how should an attorney navigate a situation where they are
+asked to do something they think is unethical?</p>
+</section>
+<section id="model-rules-of-professional-conduct-2"
+class="slide level3">
+<h3>Model Rules of Professional Conduct</h3>
+<p>Rule 5.2: Responsibilities of a Subordinate Lawyer</p>
+</section>
+<section id="example-1" class="slide level3">
+<h3>Example 1</h3>
+<p>For example, a junior attorney who is asked to advance a legal
+argument that is blatantly wrong, or is instructed to coach a witness to
+lie. Or a government attorney who thinks the proper approach is to
+confess error, but their supervisor disagrees.</p>
+</section>
+<section id="example-2" class="slide level3">
+<h3>Example 2</h3>
+<p>A recent specific example is an attorney from Covington who leaked
+documents in the #MeToo investigation of Les Moonves.</p>
+</section>
+<section id="example-3" class="slide level3">
+<h3>Example 3</h3>
+<p>Another example is the Texas v. Pennsylvania suit where Texas’s
+solicitor general did not sign the complaint and left the office not too
+long after the motion for leave to file a bill of complaint was
+filed.</p>
+</section>
+
+<section id="question-7" class="title-slide slide level2">
+<h2>Question 7</h2>
+<p>Following the pandemic, what is the current status of professionalism
+and civility among legal professionals?</p>
+<p>What are the impacts of decreased professionalism and civility?</p>
+<p>What steps should lawyers and judges take to help improve these
+areas?</p>
+</section>
+
+<section id="question-8" class="title-slide slide level2">
+<h2>Question 8</h2>
+<p>Are there generational differences in the way younger and less-young
+attorneys perceive law as a profession and/or their responsibilities as
+members of a profession? What can/should the profession do to address
+any such differences?</p>
+</section>
+
+<section id="question-9" class="title-slide slide level2">
+<h2>Question 9</h2>
+<p>As a practical matter, what steps can judges take during the pretrial
+phase of a court that will minimize the frequency of discovery disputes,
+and enable the case to proceed more promptly, inexpensively, and fairly,
+but without interfering with the ability of counsel to effectively
+represent their clients?</p>
+</section>
+
+<section id="question-10" class="title-slide slide level2">
+<h2>Question 10</h2>
+<p>Why is it important to know the local rules and judicial preferences
+in the context of providing competent representation?</p>
+</section>
+</section>
+<section id="aba-model-rules-of-professional-conduct"
 class="title-slide slide level1">
 <h1>ABA Model Rules of Professional Conduct</h1>
 
@@ -106,6 +249,22 @@ the law.</p>
 <h2>Rule 1.3: Diligence</h2>
 <p>A lawyer shall act with reasonable diligence and promptness in
 representing a client.</p>
+</section>
+<section id="nc-r-profl-cond-13-cmt-1" class="slide level3">
+<h3>N.C. R. Prof’l Cond. 1.3 cmt. [1]</h3>
+<div class="comment">
+
+<blockquote>
+<p>A lawyer should . . . take whatever lawful and ethical measures are
+required to vindicate a client’s cause or endeavor. A lawyer must also
+act with commitment and dedication to the interests of the client and
+with zeal in advocacy upon the client’s behalf. A lawyer is not bound,
+however, to press for every advantage that might be realized for a
+client. . . . The lawyer’s duty to act with reasonable diligence does
+not require the use of offensive tactics or preclude the treating of all
+persons involved in the legal process with courtesy and respect.</p>
+</div>
+</blockquote>
 </section>
 
 <section id="rule-14-communications" class="title-slide slide level2">
@@ -934,6 +1093,16 @@ that could result in incarceration, may nevertheless so defend the
 proceeding as to require that every element of the case be
 established.</p>
 </section>
+<section id="nc-r-profl-cond-31-cmt-1" class="slide level3">
+<h3>N.C. R. Prof’l Cond. 3.1 cmt. [1]</h3>
+<div class="comment">
+<blockquote>
+<p>The advocate has a duty to use legal procedure for the fullest
+benefit of the client’s cause, but also a duty not to abuse legal
+procedure.</p>
+</blockquote>
+</div>
+</section>
 
 <section id="rule-32-expediting-litigation"
 class="title-slide slide level2">
@@ -1011,6 +1180,18 @@ client; and</p>
 not be adversely affected by refraining from giving such
 information.</p>
 </blockquote>
+</section>
+<section id="nc-r-profl-cond-34-cmt-4" class="slide level3">
+<h3>N.C. R. Prof’l Cond. 3.4 cmt [4]</h3>
+<div class="comment">
+<blockquote>
+<p>Rules of evidence and procedure are designed to lead to just
+decisions and are part of the framework of the law. . . . [T]he lawyer
+is not justified in consciously violating such rules and the lawyer
+should be diligent in the effort to guard against the unintentional
+violation of them.</p>
+</blockquote>
+</div>
 </section>
 
 <section id="rule-35-impartiality--decorum-of-the-tribunal"
@@ -1265,6 +1446,20 @@ information relating to the representation of the lawyer’s client and
 knows or reasonably should know that the document or electronically
 stored information was inadvertently sent shall promptly notify the
 sender.</p>
+</section>
+<section id="nc-r-profl-cond-44-cmt-1" class="slide level3">
+<h3>N.C. R. Prof’l Cond. 4.4 cmt. [1]</h3>
+<div class="comment">
+<blockquote>
+<p>Responsibility to a client requires a lawyer to subordinate the
+interests of others to those of the client, but that responsibility does
+not imply that a lawyer may disregard the rights of third persons. It is
+impractical to catalogue all such rights, but they include legal
+restrictions on methods of obtaining evidence from third persons and
+unwarranted intrusions into privileged relationships, such as the
+client-lawyer relationship.</p>
+</blockquote>
+</div>
 </section>
 </section>
 <section>
@@ -1854,32 +2049,39 @@ conduct will occur.</p>
 </blockquote>
 </section>
 </section>
-			</div>
-		</div>
+</div>
+</div>
 
-		<script src="dist/reveal.js"></script>
-		<script src="dist/reveal-scroll.js"></script>
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
-		<script src="plugin/menu/menu.js"></script>
-		
-		
-		<script>
-		// More info about initialization & config:
-		// - https://revealjs.com/initialization/
-		// - https://revealjs.com/config/
-		Reveal.initialize({
-		hash: true,
-		width: 1280,
-		height: 720,
-		
-		// Optional libraries used to extend on reveal.js
+<script src="dist/reveal.js"></script>
+<script src="dist/reveal-scroll.js"></script>
+<script src="plugin/notes/notes.js"></script>
+<script src="plugin/markdown/markdown.js"></script>
+<script src="plugin/highlight/highlight.js"></script>
+<script src="plugin/menu/menu.js"></script>
+<script src="plugin/zoom/zoom.js"></script>
 
-		// Learn about plugins: https://revealjs.com/plugins/
-		plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMenu ]
-		});
-		</script>
 
-	</body>
+<script>
+// More info about initialization & config:
+// - https://revealjs.com/initialization/
+// - https://revealjs.com/config/
+Reveal.initialize({
+hash: true,
+width: 1280,
+height: 720,
+controls: true,
+controlsLayout: 'bottom-right',
+plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealMenu, RevealZoom ],
+menu: {
+  side: 'left',
+  width: 'normal',
+  titleSelector: 'h1, h2, h3, h4, h5, h6'
+}
+
+});
+
+
+</script>
+
+</body>
 </html>
