--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 			<p><a href="KYR-Demos.html">Know Your Rights: Demonstrations & Police Encounters</a></p>
 
+			<p><a href="KYR-Demos-11April2024.html">Know Your Rights: Demonstrations</a></p>
+
 			<p><a href="KYR-Voting.html">Know Your Rights: Voting</a></p>
 
 			<p><a href="DataTrespass.html">Data Trespass</a></p>
