--- a/KYR-Demos-11April2024.html
+++ b/KYR-Demos-11April2024.html
@@ -41,7 +41,7 @@
 		<section id="title-slide" data-state="no-title-header">					
 	<div class="title">
 	<h1 class="title">Know Your Rights:</h1>
-		<h2 class="title">Demonstrations &amp; Police Encounters</h2>
+		<h2 class="title">Demonstrations</h2>
 			<h3 class="title">National Lawyers Guild</h3>
 			<h3 class="title">Elon Law School</h2>
 			<h4 class="title">11 April 2024</h4>
@@ -51,8 +51,8 @@
 	<section id="disclaimer" class="title-slide slide level1">
 <h1>Disclaimer</h1>
 <p>This is a general overview of issues that may arise in political
-demonstrations and police encounters. The information presented is not
-offered or intended as legal advice.</p>
+demonstrations. The information presented is not offered or intended as
+legal advice.</p>
 </section>
 
 <section>
@@ -77,7 +77,7 @@ Government for a redress of grievances.</p>
 <section id="st-amendment-scope" class="slide level3">
 <h3>1st Amendment: Scope</h3>
 <p>The 1st Amendment protects against restraints on speech and assembly
-by <em>governmen”t action</em>.</p>
+by <em>government action</em>.</p>
 </section>
 <section id="st-amendment-effect" class="slide level3">
 <h3>1st Amendment: Effect</h3>
@@ -93,7 +93,7 @@ association of the speaker/participants.</p>
 </section>
 <section id="body-language" class="slide level3">
 <h3>Body Language</h3>
-<p><img data-src="img/NLG/Cash.jpg" /></p>
+<p><img data-src="img/NLG/Cash.jpg" data-fig-align="center" /></p>
 </section>
 <section id="clothing" class="slide level3">
 <h3>Clothing</h3>
@@ -102,32 +102,6 @@ association of the speaker/participants.</p>
 <section id="conduct" class="slide level3">
 <h3>Conduct</h3>
 <p><img data-src="img/NLG/Flag.jpg" /></p>
-</section>
-
-<section id="st-amendment-permissible-regulation"
-class="title-slide slide level2">
-<h2>1st Amendment: Permissible Regulation</h2>
-<p>Government may regulate the time, place, and manner of speech or
-assembly.</p>
-</section>
-<section id="time-place--manner-regulations" class="slide level3">
-<h3>Time, Place, &amp; Manner Regulations</h3>
-<ul>
-<li>Permits for use of certain public places</li>
-<li>Noise ordinances &amp; regulations of sound equipment</li>
-<li>Restrictions on posting signs or flyers</li>
-<li>Prohibitions against blocking pedestrians or traffic</li>
-</ul>
-</section>
-<section id="time-place--manner-regulations-1" class="slide level3">
-<h3>Time, Place, &amp; Manner Regulations</h3>
-<ul>
-<li>Must be content-neutral, both facially and as applied.</li>
-<li>Must be narrowly-tailored to protect a substantial government
-interest.</li>
-<li>Must leave open alternative channels of communication to reach the
-intended audience.</li>
-</ul>
 </section>
 
 <section id="st-amendment-public-forum"
@@ -144,70 +118,151 @@ to unrestricted public speech &amp; activity.</p>
 <li>Plazas outside government buildings</li>
 </ul>
 </section>
-<section id="public-forum-protected-activity" class="slide level3">
-<h3>Public Forum: Protected Activity</h3>
-<p>These activities are generally permitted in a public forum (subject
-to reasonable time, place, &amp; manner regulation):</p>
-</section>
-<section class="slide level3">
 
-<h4 id="peaceful-demonstrations">Peaceful demonstrations</h4>
+<section id="permissible-regulation" class="title-slide slide level2">
+<h2>Permissible Regulation</h2>
+<p>Government may regulate the time, place, and manner of speech or
+assembly.</p>
+</section>
+<section id="time-place--manner-regulations-rules" class="slide level3">
+<h3>Time, Place, &amp; Manner Regulations: Rules</h3>
 <ul>
-<li>Permits may be required for sound amplification.</li>
-<li>Permits may be required for demonstrations in certain public spaces,
-such as parks.</li>
+<li>Must be content-neutral, both facially and as applied.</li>
+<li>Must be narrowly-tailored to protect a substantial government
+interest.</li>
+<li>Must leave open alternative channels of communication to reach the
+intended audience.</li>
 </ul>
 </section>
-<section class="slide level3">
-
-<h4 id="signs-banners">Signs, banners</h4>
-<p>There may be restrictions on poles or other material that could pose
-a danger.</p>
-</section>
-<section class="slide level3">
-
-<h4 id="distribution-of-literature">Distribution of literature</h4>
-<p>Posting leaflets on walls, lightposts, etc. may be prohibited.</p>
-</section>
-<section id="public-forum-unprotected-activity" class="slide level3">
-<h3>Public Forum: Unprotected Activity</h3>
-<p>These activities may be restricted or prohibited, and may result in
-arrest:</p>
+<section id="time-place--manner-regulations-examples"
+class="slide level3">
+<h3>Time, Place, &amp; Manner Regulations: Examples</h3>
 <ul>
-<li>Blocking sidewalks</li>
-<li>Blocking entry to and exit from buildings and public access
-areas</li>
-<li>Demonstrating or marching in the street without a permit</li>
-<li>Blocking traffic</li>
+<li>Permit requirements</li>
+<li>Noise ordinances &amp; regulations of sound equipment</li>
+<li>Restrictions on posting signs or flyers</li>
+<li>Prohibitions against blocking pedestrians or traffic</li>
 </ul>
 </section>
 
-<section id="st-amendment--the-police" class="title-slide slide level2">
-<h2>1st Amendment &amp; the Police</h2>
-<p><img data-src="img/NLG/GSOpolice.jpg" /></p>
-</section>
-<section id="interacting-with-police" class="slide level3">
-<h3>Interacting with Police</h3>
-<p>It is generally a good idea to have someone designated to communicate
-with the police in the event they attempt to restrict 1st Amendment
-activity, or threaten/carry out arrests, during a demonstration.</p>
-</section>
-<section class="slide level3">
+<section id="prior-restraints" class="title-slide slide level2">
+<h2>Prior Restraints</h2>
 
-<p>You may ask the police to explain any restrictions on the
-activity.</p>
 </section>
-<section class="slide level3">
-
-<p>You may ask the police why participants have been arrested and where
-they will be taken following arrest.</p>
+<section id="content-neutral-prior-restraints" class="slide level3">
+<h3>Content-Neutral Prior Restraints</h3>
+<p>BLM group marches in downtown Winston. The police shut down the
+parade because the group did not apply for a permit.</p>
+<p><em>Does this violate the 1st Amendment?</em></p>
 </section>
-<section id="interacting-with-police-1" class="slide level3">
-<h3>Interacting with Police</h3>
-<p>Even if the police do not provide satisfactory answers, or you
-believe they are infringing on your 1st Amendment rights, arguing with
-them is typically futile and may lead to being charged with resisting
-arrest or other criminal offenses.</p>
+<section id="content-neutral-prior-restraints-rule"
+class="slide level3">
+<h3>Content-Neutral Prior Restraints: Rule</h3>
+<p><em>Content-neutral</em> prior restraints are permissible so long as
+they are</p>
+<ol type="a">
+<li>justified by the noncommunicative impact of the speech, and</li>
+<li>the scheme does not provide unfettered discretion to the
+decisionmaker as to whether the speech is permitted.</li>
+</ol>
+</section>
+<section id="content-based-prior-restraints" class="slide level3">
+<h3>Content-Based Prior Restraints</h3>
+<p>BLM group applies for a permit to march in downtown Winston. The city
+denies the request because of the controversial nature of the BLM’s
+speech.</p>
+<p><em>Does this violate the 1st Amendment?</em></p>
+</section>
+<section id="content-based-prior-restraints-rule" class="slide level3">
+<h3>Content-Based Prior Restraints: Rule</h3>
+<p><em>Content-based</em> prior restraints violate the 1st
+Amendment.</p>
+</section>
+<section id="permit-requirements" class="slide level3">
+<h3>Permit Requirements</h3>
+<p>Ordinance: permit applicants have to pay not more than $1000 per day,
+and the county administrator is empowered to “adjust the amount to meet
+the expense” based on the “maintenance of public order in the matter
+licensed.”</p>
+</section>
+<section id="permit-requirements-rule" class="slide level3">
+<h3>Permit Requirements: Rule</h3>
+<p><em>Forsyth County of Georgia v Nationalist Movement</em> (1992)</p>
+<p>The ordinance violates the 1st Amendment.</p>
+<ul>
+<li>Permit requirements can be imposed so long as they do not “delegate
+overly broad licensing discretion to a government official,” and are
+“not based on the content of the message.”</li>
+<li>Here, “the decision how much to charge—or even whether to charge at
+all—is left to the whim of the administrator.”</li>
+<li>There are “no articulated standards” or “objective factors” on which
+the administrator is instructed to rely, or a requirement to “provide an
+explanation for the decision,” and the decision is not subject to review
+on appeal.</li>
+<li>“The ordinance often requires that the fee be based on the content
+of the speech.”</li>
+</ul>
+</section>
+<section id="permit-requirements-public-forum" class="slide level3">
+<h3>Permit Requirements–Public Forum</h3>
+<p>Anti-Ukraine War group meets up for a protest in publicly owned
+downtown park. Members are arrested for trespassing for not having a
+permit.</p>
+</section>
+<section id="permit-requirements-public-forum-rule"
+class="slide level3">
+<h3>Permit Requirements–Public Forum: Rule</h3>
+<p>Generally, protesting in “public forums” such as sidewalks and parks
+is permissible without a permit, and cannot be restricted based on the
+protest’s message.</p>
+</section>
+<section id="literature-distribution" class="slide level3">
+<h3>Literature Distribution</h3>
+<p>Ordinance bars the distribution of literature without a permit in
+advance due to the government interest in preventing littering.</p>
+</section>
+<section id="literature-distribution-rule" class="slide level3">
+<h3>Literature Distribution: Rule</h3>
+<p><em>Schneider v. New Jersey</em> (1939): The ordinance violates the
+1st Amendment.</p>
+<p>The government interest in keeping the streets clean is insufficient
+to justify prohibiting defendants from passing out First
+Amendment-protected literature.</p>
+</section>
+<section id="interfering-with-traffic" class="slide level3">
+<h3>Interfering with Traffic</h3>
+<p>Anti-Ukraine War group meets up for a protest on the street. They
+march on the highway and are arrested for interfering with traffic.</p>
+</section>
+<section id="interfering-with-traffic-rule" class="slide level3">
+<h3>Interfering with Traffic: Rule</h3>
+<p>Generally, restrictions on protests for non-content-related reasons
+are permissible when those protests cause interference with the
+government’s purposes for the property on which the protest is taking
+place. Examples in this context would be traffic control or public
+safety.</p>
+<figure>
+<img data-src="img/NLG/protests-blockade.jpg"
+alt="Pro-Palestine protesters blocked the Manhattan Bridge in January (Olga Fedorova/ZUMAPRESS/Newscom)" />
+<figcaption aria-hidden="true">Pro-Palestine protesters blocked the
+Manhattan Bridge in January (Olga
+Fedorova/ZUMAPRESS/Newscom)</figcaption>
+</figure>
+</section>
+<section id="location-based-restrictions" class="slide level3">
+<h3>Location-Based Restrictions</h3>
+<p>Anti-Gaza War protesters solicit for donations for Palestinian
+hospitals in the medians on Battleground Avenue. One protester was hit
+by a driver, and the city of Greensboro has banned all pedestrians from
+the Battleground medians.</p>
+</section>
+<section id="location-based-restrictions-rule" class="slide level3">
+<h3>Location-Based Restrictions: Rule</h3>
+<p>Generally, restrictions on protests for non-content-related reasons
+are permissible when those protests cause interference with the
+government’s purposes for the property on which the protest is taking
+place. Examples in this context would be traffic control or public
+safety.</p>
 </section>
 </section>
 <section>
@@ -220,65 +275,26 @@ class="title-slide slide level1">
 <h2>Photos &amp; Video Images</h2>
 <p>A person who is lawfully present in a public place may photograph or
 make video recordings of anything and any person in plain view.</p>
-</section>
-<section class="slide level3">
-
-<p>This includes law enforcement personnel and equipment</p>
-</section>
-<section id="permission-of-those-photographed-or-recorded"
-class="slide level3">
-<h3>Permission of Those Photographed or Recorded</h3>
-<p>Permission of the person being photographed or recorded is not
-required.</p>
-</section>
-<section class="slide level3">
-
-<p>Many people do not understand this and may object that photographing
-or recording them without their permission is a violation of their
-privacy or other legal rights.</p>
-</section>
-<section class="slide level3">
-
-<p>It is unlawful for any person to use physical force to stop you from
-taking photographs or recordings in a public place.</p>
-</section>
-<section class="slide level3">
-
-<p>But be aware that photographs and recordings may be used as evidence
-against demonstrators in criminal or civil cases.</p>
+<ul>
+<li><p>Permission of persons being photographed or video-recorded is not
+required</p></li>
+<li><p>This includes law enforcement personnel and equipment</p></li>
+</ul>
 </section>
 
 <section id="audio-recordings" class="title-slide slide level2">
 <h2>Audio Recordings</h2>
 <p>In North Carolina, audio recordings of <em>private conversations</em>
 only require the consent of <em>one party</em> to the conversation.</p>
-</section>
-<section class="slide level3">
-
-<p>This may apply to conversations in public places, if there is a
-<em>reasonable expectation of privacy</em>.</p>
-</section>
-<section class="slide level3">
-
-<p>If the person making the audio recording is a party to the
-conversation, their consent is sufficient.</p>
-</section>
-<section class="slide level3">
-
-<p>Audio recordings of conversations with the police acting in their
-official capacity are not private and do not require permission.</p>
-</section>
-
-<section id="photographs--recordings-on-private-property"
-class="title-slide slide level2">
-<h2>Photographs &amp; Recordings on Private Property</h2>
-<p>The owner of private property may prohibit or restrict photography
-and recording on the property.</p>
-</section>
-<section class="slide level3">
-
-<p>But a property owner may not prohibit you from taking photographs or
-recordings of the property from a public place.</p>
+<ul>
+<li><p>This may apply to conversations in public places, if there is a
+<em>reasonable expectation of privacy</em>.</p></li>
+<li><p>If the person making the audio recording is a party to the
+conversation, their consent is sufficient.</p></li>
+<li><p>Audio recordings of conversations with the police acting in their
+official capacity are not private and do not require
+permission.</p></li>
+</ul>
 </section>
 
 <section id="police-interference-with-photography--recording"
@@ -286,18 +302,25 @@ class="title-slide slide level2">
 <h2>Police Interference with Photography &amp; Recording</h2>
 <p>The police may not lawfully prohibit you from, or arrest you for,
 taking photographs or recordings in a public place.</p>
-</section>
-<section class="slide level3">
-
-<p>The police may not lawfully seize your equipment, demand to view your
-photographs or recordings, or delete your photographs or recordings
-without a warrant.</p>
-</section>
-<section class="slide level3">
-
-<p>The police may lawfully order you to cease activity, including
+<ul>
+<li><p>The police may not lawfully seize your equipment, demand to view
+your photographs or recordings, or delete your photographs or recordings
+without a warrant.</p></li>
+<li><p>The police may lawfully order you to cease activity, including
 photography or video recording, if it is interfering with an arrest or
-other legitimate law enforcement activity.</p>
+other legitimate law enforcement activity.</p></li>
+</ul>
+</section>
+
+<section id="photographs--recordings-on-private-property"
+class="title-slide slide level2">
+<h2>Photographs &amp; Recordings on Private Property</h2>
+<p>The owner of private property may prohibit or restrict photography
+and recording on the property.</p>
+<ul>
+<li>But a property owner may not prohibit you from taking photographs or
+recordings of the property from a public place.</li>
+</ul>
 </section>
 </section>
 </div>
