--- a/index.html
+++ b/index.html
@@ -44,15 +44,17 @@
 
 		<article>  
 
-			<p><a href="KYR-Demos.html">Know Your Rights: Demonstrations & Police Encounters</a></p>
+			<p><a href="KnowYourRights/Demonstrations.html">Know Your Rights: Demonstrations & Police Encounters</a></p>
 
-			<p><a href="KYR-Demos-11April2024.html">Know Your Rights: Demonstrations</a></p>
+			<p><a href="KnowYourRights/Demonstrations-11April2024.html">Know Your Rights: Demonstrations</a></p>
 
-			<p><a href="KYR-Voting.html">Know Your Rights: Voting</a></p>
+			<p><a href="KnowYourRights/Voting.html">Know Your Rights: Voting</a></p>
 
 			<p><a href="DataTrespass.html">Data Trespass</a></p>
 
-			<p><a href="MRPC.html">Model Rules of Professional Conduct</a></p>
+			<p><a href="4thCirJudicialConf2023/MRPC.html">Model Rules of Professional Conduct</a></p>
+			
+			<p><a href="NCBA_Oct2024/Guardianships.html">Model Rules of Professional Conduct</a></p>
 		  	
 		</article>
 
